fix for uncleared orbit overflow on mobile (css transform escapes overflow hidden on mobile)

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ h2 {
 }
 
 .uncleared .path-container {
-	transform: translate(0, 5px);
+	margin-top: calc(-100% + 105px);
 }
 
 .uncleared .path {
